--- a/index.html
+++ b/index.html
@@ -2,6 +2,21 @@
 <html>
 <head>
 	<title>Random Image Website</title>
+	<style>
+		#imageContainer {
+			width: 50px;
+			height: 50px;
+			border: 1px solid black;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
+
+		#randomImage {
+			max-width: 100%;
+			max-height: 100%;
+		}
+	</style>
 </head>
 <body onload="changeImage()">
 	<h1>Random Image Generator</h1>
