--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Random Animal Image Website</title>
+	<title>LinkedIn Gamification Challenge</title>
 	<style>
 		#image-frame {
 			width: 400px;
