--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 		<img id="randomImage">
 		<p id="joke"></p>
 	</div>
+	<div>
+		<button onclick="refreshPage()">Refresh Page</button>
+	</div>
 	
 	<script>
 		var images = ["image1.jpg", "image2.jpg", "image3.jpg", "image4.jpg", "image5.jpg"];
@@ -36,6 +39,9 @@
 			var randomNumber = Math.floor(Math.random() * images.length);
 			document.getElementById("randomImage").src = images[randomNumber];
 			document.getElementById("joke").innerHTML = jokes[randomNumber];
+		}
+		function refreshPage() {
+			window.location.reload();
 		}
 		changeImage(); // call the function on page load
 	</script>
